# maelstrom-ocaml

./: .gitignore  readme.md
3-broadcast/: main.go
go_glomers/1-echo/: main.go
go_glomers/2-unique-ids/: go.mod  main.go
go_glomers/3-broadcast/: go.mod
maelstrom/store/: latest
maelstrom/store/echo/: latest
maelstrom/store/echo/20230225T013210.408-0500/: history.edn  history.txt  test.jepsen  timeline.html
maelstrom/store/echo/20230225T013210.408-0500/net-journal/: 0.fressian  (+3 more)
maelstrom/store/echo/20230227T005821.014-0500/: history.edn  history.txt  test.jepsen  timeline.html
maelstrom/store/echo/20230227T010012.969-0500/: history.edn  history.txt  results.edn  test.jepsen  timeline.html
maelstrom/store/echo/20230227T010305.666-0500/: history.edn  history.txt  results.edn  test.jepsen  timeline.html
maelstrom/store/echo/20230227T020650.249-0500/: test.jepsen
maelstrom/store/echo/20230227T020659.849-0500/: history.edn  history.txt  test.jepsen
maelstrom/store/unique-ids/: latest
maelstrom/store/unique-ids/20230227T020747.497-0500/: results.edn
maelstrom/store/unique-ids/20230227T021238.280-0500/: results.edn
maelstrom/store/unique-ids/20230227T021356.254-0500/: test.jepsen
maelstrom/store/unique-ids/20230227T021414.051-0500/: history.txt  results.edn  test.jepsen  timeline.html
ocaml/: dune-project  maelstrom.opam
ocaml/lib/maelstrom/: crdt.ml  dune  kv.ml  maelstrom.ml  message.ml  node.ml  print.ml  protocol.ml  uuid.ml
ocaml_glomers/: dune-project
ocaml_glomers/_build/: log
ocaml_glomers/lib/: dune
ocaml_glomers/test/: dune
(+61 files in other folders)
